--- a/sass/components/header/_navigation.scss
+++ b/sass/components/header/_navigation.scss
@@ -1,13 +1,13 @@
 .main-navigation {
 
   ul {
-display: none;
+    display: none;
     list-style: none;
     margin: 0;
     padding-left: 0;
     background-color: $wp-meliora__neutral-white;
 
-    @include media(laptop) {
+    @include media(tablet) {
       position: relative;
       background: transparent;
       animation: unset;
@@ -24,7 +24,7 @@ display: none;
       top: unset;
       left: unset;
 
-      @include media(laptop) {
+      @include media(tablet) {
         border: 1px solid $wp-meliora__neutral-dark-gray-color;
         float: left;
         position: absolute;
@@ -40,7 +40,7 @@ display: none;
       ul {
         width: 100%;
 
-        @include media(laptop) {
+        @include media(tablet) {
           left: -999em;
           top: 0;
         }
@@ -65,7 +65,7 @@ display: none;
           }
         }
 
-        @include media(laptop) {
+        @include media(tablet) {
           &:hover > ul,
           &.focus > ul {
             display: block;
@@ -115,7 +115,7 @@ display: none;
     color: $wp-meliora__tertiary-color;
     padding: 10px 0;
 
-    @include media(laptop) {
+    @include media(tablet) {
       color: $wp-meliora__neutral-dark-gray-color;
     }
 
@@ -124,7 +124,7 @@ display: none;
     }
   }
 
-  @include media(laptop) {
+  @include media(tablet) {
     .current_page_item > a,
     .current-menu-item > a,
     .current_page_ancestor > a,
@@ -160,7 +160,7 @@ display: none;
     justify-content: flex-start;
     flex-wrap: wrap;
 
-    @include media(laptop) {
+    @include media(tablet) {
       flex-wrap: nowrap;
     }
 
@@ -169,7 +169,7 @@ display: none;
       transform: rotate(0deg);
       color: $wp-meliora__neutral-dark-gray-color;
 
-      @include media(laptop) {
+      @include media(tablet) {
         transform: rotate(-90deg);
       }
 
@@ -199,7 +199,7 @@ display: none;
   animation: fadeInFromNone 0.4s forwards;
 }
 
-@media screen and (min-width: 37.5em) {
+@include media(tablet){
 
   .menu-toggle {
     display: none;
